# recipe-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: changelog-check.yml  release-changelog-check.yml  tests.yml
changelog.d/: 1.added.md  11.added.md  11.changed.md  2.added.md  4.added.md  5.added.md
src/: fdc_client.py  food_cache.py
tests/: conftest.py  test_food_cache.py
